--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
 
 </head>
 
@@ -36,7 +37,22 @@
                 </header>
 
                 <!-- Banner -->
-                <div w3-include-html="part/welcome.html"></div>
+                <section id="banner">
+                    <div class="content">
+                        <header>
+                            <h1>Hi, I’m Editorial<br />
+                                by HTML5 UP</h1>
+                            <p>A free and fully responsive site template</p>
+                        </header>
+                        <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+                        <ul class="actions">
+                            <li><a href="#" class="button big">Learn More</a></li>
+                        </ul>
+                    </div>
+                    <span class="image object">
+                        <img src="images/pic10.jpg" alt="" />
+                    </span>
+                </section>
 
                 <!-- Section -->
                 <section>
@@ -139,7 +155,6 @@
         <div id="sidebar">
             <div class="inner">
 
-
                 <!-- Menu -->
                 <div w3-include-html="part/menu.html"></div>
 
@@ -152,15 +167,20 @@
                 <!-- Footer -->
                 <div w3-include-html="part/footer.html"></div>
 
+
+
             </div>
         </div>
 
     </div>
 
     <!-- Scripts -->
-     
-    <script src="assets/js/include.js"></script>
-    <script>includeHTML();</script>
+    
+    <script>
+        w3.includeHTML();
+
+    </script>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
