--- a/part/menu.html
+++ b/part/menu.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="../assets/css/main.css" />
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
 
 </head>
 
@@ -41,6 +42,7 @@
             <li><a href="#">Amet Lacinia</a></li>
         </ul>
     </nav>
+    
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/browser.min.js"></script>
     <script src="../assets/js/breakpoints.min.js"></script>
