--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="inner">
 
                 <!-- Menu -->
-                <div w3-include-html="menu.html"></div>
+                <div w3-include-html="menu"></div>
 
                 <!-- News -->
                 <div w3-include-html="part/news.html"></div>
@@ -178,7 +178,6 @@
     
     <script>
         w3.includeHTML();
-
     </script>
 
     <script src="assets/js/jquery.min.js"></script>
