--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="inner">
 
                 <!-- Menu -->
-                <div w3-include-html="menu"></div>
+                <div w3-include-html="menu.html"></div>
 
                 <!-- News -->
                 <div w3-include-html="part/news.html"></div>
