--- a/part/menu.html
+++ b/part/menu.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="assets/css/main.css" />
-    <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <script src="assets/js/include.js"></script>
 
 </head>
 
