--- a/part/footer.html
+++ b/part/footer.html
@@ -1,6 +1,15 @@
-<footer id="footer">
+<html>
+
+<head>
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="assets/js/include.js"></script>
+
+</head>
+
+<body>
+    <footer id="footer">
         <div class="inner">
-<!--
+            <!--
             <ul class="icons">
                 <li><a target="_blank" href="https://www.facebook.com/dreamcity26481414/" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a target="_blank" href="https://www.instagram.com/dream_city.1125/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -11,7 +20,7 @@
             <ul class="copyright">
                 <oi>&copy; 2020 夢想之都工作室</oi>
             </ul>
-<!--
+            <!--
             <ul class="copyright">
                 <oi>&copy; 2020 夢想之都工作室 | </oi>
                 <oi><a target="_blank" href="https://go.dreamcity.studio/donate">小額贊助 | </a></oi>
@@ -22,3 +31,12 @@
 
         </div>
     </footer>
+
+
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+
+</body>
