--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- Sidebar -->
         <div id="sidebar">
             <div class="inner">
-
+                <button onclick="includeHTML();">btn</button>
                 <!-- Menu -->
                 <div w3-include-html="part/menu.html"></div>
 
@@ -175,7 +175,7 @@
     </div>
 
     <!-- Scripts -->
-    <script>includeHTML();</script>
+<!--    <script>includeHTML();</script>-->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
