--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                     </div>
                     <span class="image object">
                         <script type=text/javascript>
-                            img = Math.floor(Math.random()*6);
-                            document.write("<img src='images/bg/"+img+".jpg'>");
+                            img = Math.floor(Math.random() * 6);
+                            document.write("<img src='images/bg/" + img + ".jpg'>");
+
                         </script>
                     </span>
                 </section>
@@ -207,23 +208,22 @@
                 <!-- Menu End -->
 
                 <!-- News -->
-                <section class="width:300px;">
+                <section style="width:280px; height: 600px;">
                     <header class="major">
                         <h2>News</h2>
                     </header>
-                    <div class="fb-page" data-href="https://www.facebook.com/dreamcity26481414" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                        <blockquote cite="https://www.facebook.com/dreamcity26481414" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/dreamcity26481414">夢想之都工作室</a></blockquote>
+                    <div class="fb-page" data-href="https://www.facebook.com/dreamcity26481414/" data-tabs="timeline" data-width="" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/dreamcity26481414/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/dreamcity26481414/">夢想之都工作室</a></blockquote>
                     </div>
                 </section>
                 <!-- News End -->
-
 
                 <!-- Contact -->
                 <section>
                     <header class="major">
                         <h2>Contact</h2>
                     </header>
-                    <p>歡迎聯繫夢想之都工作室，我們會盡速答覆。</p>
+                    <p>有任何問題歡迎聯繫我們，我們會盡速答覆。</p>
                     <ul class="contact">
                         <li target="_blank" class="icon solid fa-envelope"><a href="mailto:contact@dreamcity.studio">contact@dreamcity.studio</a></li>
                         <li target="_blank" class="icon brands fa-facebook-square"><a href="https://www.facebook.com/dreamcity26481414">夢想之都工作室</a></li>
