--- a/index.html
+++ b/index.html
@@ -88,35 +88,35 @@
                 <!-- Dot -->
                 <section>
                     <header class="major">
-                        <h2>Erat lacinia</h2>
+                        <h2>夢都精神</h2>
                     </header>
                     <div class="features">
                         <article>
                             <span class="icon solid fa-layer-group"></span>
                             <div class="content">
-                                <h3>Portitor ullamcorper</h3>
-                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <h3>創意－來自無限的想像</h3>
+                                <p>一款自由度最高的遊戲，讓我們可以自由發揮創意、揮灑夢想。</p>
                             </div>
                         </article>
                         <article>
                             <span class="icon solid fa-paper-plane"></span>
                             <div class="content">
-                                <h3>Sapien veroeros</h3>
-                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <h3>創新－來自經驗的累積</h3>
+                                <p>現在的努力，將成為未來的累積，創新的想法便由此而生。</p>
                             </div>
                         </article>
                         <article>
                             <span class="icon solid fa-rocket"></span>
                             <div class="content">
-                                <h3>Quam lorem ipsum</h3>
-                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <h3>創作－來自眾人的合作</h3>
+                                <p>建築、技術、美術，各個部門通力合作，完成地圖創作。</p>
                             </div>
                         </article>
                         <article>
                             <span class="icon solid fa-signal"></span>
                             <div class="content">
-                                <h3>Sed magna finibus</h3>
-                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <h3>創造－來自全心的投入</h3>
+                                <p>全心投入，不半途而廢，一步步扎實完成，創造優質作品。</p>
                             </div>
                         </article>
                     </div>
