--- a/index.html
+++ b/index.html
@@ -92,28 +92,28 @@
                     </header>
                     <div class="features">
                         <article>
-                            <span class="icon solid fa-layer-group"></span>
+                            <span class="icon solid fa-globe-asia"></span>
                             <div class="content">
                                 <h3>創意－來自無限的想像</h3>
                                 <p>一款自由度最高的遊戲，讓我們可以自由發揮創意、揮灑夢想。</p>
                             </div>
                         </article>
                         <article>
-                            <span class="icon solid fa-paper-plane"></span>
+                            <span class="icon solid fa-layer-group"></span>
                             <div class="content">
                                 <h3>創新－來自經驗的累積</h3>
                                 <p>現在的努力，將成為未來的累積，創新的想法便由此而生。</p>
                             </div>
                         </article>
                         <article>
-                            <span class="icon solid fa-rocket"></span>
+                            <span class="icon solid fa-people-carry"></span>
                             <div class="content">
                                 <h3>創作－來自眾人的合作</h3>
                                 <p>建築、技術、美術，各個部門通力合作，完成地圖創作。</p>
                             </div>
                         </article>
                         <article>
-                            <span class="icon solid fa-signal"></span>
+                            <span class="icon solid fa-hammer"></span>
                             <div class="content">
                                 <h3>創造－來自全心的投入</h3>
                                 <p>全心投入，不半途而廢，一步步扎實完成，創造優質作品。</p>
