--- a/index.html
+++ b/index.html
@@ -95,28 +95,32 @@
                             <span class="icon solid fa-globe-asia"></span>
                             <div class="content">
                                 <h3>創意－來自無限的想像</h3>
-                                <p>一款自由度最高的遊戲，讓我們可以自由發揮創意、揮灑夢想。</p>
+                                <p>Minecraft，一款自由度最高的遊戲<br>
+                                    讓我們可以自由發揮創意、揮灑夢想</p>
                             </div>
                         </article>
                         <article>
                             <span class="icon solid fa-layer-group"></span>
                             <div class="content">
                                 <h3>創新－來自經驗的累積</h3>
-                                <p>現在的努力，將成為未來的累積，創新的想法便由此而生。</p>
+                                <p>現在的努力，將成為未來的累積<br>
+                                    創新的想法便由此而生</p>
                             </div>
                         </article>
                         <article>
                             <span class="icon solid fa-people-carry"></span>
                             <div class="content">
                                 <h3>創作－來自眾人的合作</h3>
-                                <p>建築、技術、美術，各個部門通力合作，完成地圖創作。</p>
+                                <p>建築、技術、美術、企劃、影音<br>
+                                    部門間通力合作，完成地圖創作</p>
                             </div>
                         </article>
                         <article>
                             <span class="icon solid fa-hammer"></span>
                             <div class="content">
                                 <h3>創造－來自全心的投入</h3>
-                                <p>全心投入，不半途而廢，一步步扎實完成，創造優質作品。</p>
+                                <p>全心投入，不半途而廢<br>
+                                一步步扎實完成，創造優質作品</p>
                             </div>
                         </article>
                     </div>
@@ -133,7 +137,7 @@
                             <a href="map/rpg_Hero_of_Island" class="image"><img src="map/images/17/5.jpg" alt="" /></a>
                             <h3>島國勇者</h3>
                             <p>諾斯克島，曾被大海所吞沒<br>
-                               隨著地殼變動，島嶼逐漸展露<br>
+                                隨著地殼變動，島嶼逐漸展露<br>
                                 先民們在島上開墾，抵禦狼群、建立信仰<br>
                                 隨著克拉特的腳步，揭開諾斯克的神秘面紗</p>
                             <ul class="actions">
