--- a/about/index.html
+++ b/about/index.html
@@ -408,49 +408,49 @@
                             <span class="opener">關於夢都</span>
                             <ul>
                                 <li><a href="../about/">團隊沿革</a></li>
-                                <li><a href="member">成員介紹</a></li>
-                                <li><a href="rules">團隊規章</a></li>
+                                <li><a href="../about/member">成員介紹</a></li>
+                                <li><a href="../about/rules">團隊規章</a></li>
                             </ul>
                         </li>
 
                         <li>
                             <span class="opener">活動消息</span>
                             <ul>
-                                <li><a href="activity/Monster_Girl_TD">妖姬塔防 聲優招募</a></li>
-                                <li><a href="activity/rtx">RTX 建築大賞</a></li>
+                                <li><a href="../activity/Monster_Girl_TD">妖姬塔防 聲優招募</a></li>
+                                <li><a href="../activity/rtx">RTX 建築大賞</a></li>
                             </ul>
                         </li>
 
                         <li>
                             <span class="opener">地圖作品</span>
                             <ul>
-                                <li><a href="map/rpg">RPG</a></li>
-                                <li><a href="map/ctm">CTM</a></li>
-                                <li><a href="map/survival">生存</a></li>
-                                <li><a href="map/puzzle">解謎</a></li>
-                                <li><a href="map/pvp">其他</a></li>
+                                <li><a href="../map/rpg">RPG</a></li>
+                                <li><a href="../map/ctm">CTM</a></li>
+                                <li><a href="../map/survival">生存</a></li>
+                                <li><a href="../map/puzzle">解謎</a></li>
+                                <li><a href="../map/pvp">其他</a></li>
                             </ul>
                         </li>
                         <li>
                             <span class="opener">建築創作</span>
                             <ul>
-                                <li><a href="buildings/palloide">暮朗</a></li>
-                                <li><a href="buildings/IlIlIlIllIlIlIlI">I 醬</a></li>
+                                <li><a href="../buildings/palloide">暮朗</a></li>
+                                <li><a href="../buildings/IlIlIlIllIlIlIlI">I 醬</a></li>
                             </ul>
                         </li>
 
                         <li>
                             <span class="opener">美術作品</span>
                             <ul>
-                                <li><a href="art/MM">莫嵐</a></li>
-                                <li><a href="art/CC">唯唏</a></li>
-                                <li><a href="art/rabbit">兔乃</a></li>
-                                <li><a href="art/Yauyu">小司</a></li>
+                                <li><a href="../art/MM">莫嵐</a></li>
+                                <li><a href="../art/CC">唯唏</a></li>
+                                <li><a href="../art/rabbit">兔乃</a></li>
+                                <li><a href="../art/Yauyu">小司</a></li>
                             </ul>
                         </li>
-                        <li><a href="join">加入我們</a></li>
-                        <li><a href="partner">合作夥伴</a></li>
-                        <li><a href="donate">小額贊助</a></li>
+                        <li><a href="../join">加入我們</a></li>
+                        <li><a href="../partner">合作夥伴</a></li>
+                        <li><a href="../donate">小額贊助</a></li>
                     </ul>
                 </nav>
                 <!-- Menu End -->
