--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,7 @@
                             <div class="input">
                                 <span data-year="2015/08" data-info="解散團隊"></span>
                             </div>
-                            <div class="input active">
+                            <div class="input">
                                 <span data-year="2015/11" data-info="重組團隊"></span>
                             </div>
                             <div class="input">
@@ -112,6 +112,57 @@
 
                 </section>
 
+                <!-- Dot -->
+                <section>
+                    <header class="major">
+                        <h2>團隊架構</h2>
+                    </header>
+                    <div class="features">
+                        <article>
+                            <span class="icon solid fa-book-reader"></span>
+                            <div class="content">
+                                <h3>管理小組</h3>
+                                <p>由團長、各部門首席、次席與參議顧問共同組成<br>負責進行團內重大決策</p>
+                            </div>
+                        </article>
+                        <article>
+                            <span class="icon solid fa-landmark"></span>
+                            <div class="content">
+                                <h3>建築設計部門</h3>
+                                <p>負責各式地圖專案，地形編輯、建築建設<br>造景處理、地區規劃</p>
+                            </div>
+                        </article>
+                        <article>
+                            <span class="icon solid fa-code"></span>
+                            <div class="content">
+                                <h3>技術工程部門</h3>
+                                <p>負責各式地圖專案，資料包撰寫<br>輔助程式開發應用</p>
+                            </div>
+                        </article>
+                        <article>
+                            <span class="icon solid fa-palette"></span>
+                            <div class="content">
+                                <h3>美術宣傳部門</h3>
+                                <p>負責團隊宣傳用圖繪製、編輯<br>地圖材質包製作、動畫製作</p>
+                            </div>
+                        </article>
+                        <article>
+                            <span class="icon solid fa-scroll"></span>
+                            <div class="content">
+                                <h3>企劃管理部門</h3>
+                                <p>負責地圖企劃編寫、構思團隊活動<br>處理會議事務、官網維護</p>
+                            </div>
+                        </article>
+                        <article>
+                            <span class="icon solid fa-video"></span>
+                            <div class="content">
+                                <h3>實況影音部門</h3>
+                                <p>負責協助地圖預告片、動畫製作<br>地圖封測、公關宣傳</p>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+                <!-- Dot End -->
 
 
                 <section id="Three" class="wrapper">
@@ -269,7 +320,7 @@
 
                             </div>
                             <div class="staff-group">
-                                <div class="group-title"><span>故事企劃部</span></div>
+                                <div class="group-title"><span>企劃管理部</span></div>
                                 <div class="staff-card">
                                     <a href="./member#11" style="border-bottom-color:white;">
                                         <div class="staff-photo image" id="image"><img src="images/11.jpg" alt="" border="0"></div>
