--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo"><img width="3.3%" src="images/logo.ico" alt=""><strong> 夢想之都工作室</strong> DreamCity</a>
+                    <a href="../" class="logo"><img width="3.3%" src="images/logo.ico" alt=""><strong> 夢想之都工作室</strong> DreamCity</a>
                     <ul class="icons">
                         <li><a target="_blank" href="https://www.facebook.com/dreamcity26481414/" class="icon brands fa-facebook-square"><span class="label">Facebook</span></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/dream_city.1125/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
