--- a/map/Beta.html
+++ b/map/Beta.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>星痕冒險 | 夢想之都工作室</title>
+    <title>地圖封閉測試外部參加人員規則 | 夢想之都工作室</title>
     <link rel="icon" href="https://www.dreamcity.studio/images/logo.ico" />
     <link
       rel="stylesheet"
@@ -15,9 +15,9 @@
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
     <script defer="defer" src="js/chunk-vendors.91092d75.js"></script>
-    <script defer="defer" src="js/Lost_in_Space.0b09442c.js"></script>
+    <script defer="defer" src="js/Beta.9de1e868.js"></script>
     <link href="css/chunk-vendors.ea48489f.css" rel="stylesheet" />
-    <link href="css/Lost_in_Space.4f122eea.css" rel="stylesheet" />
+    <link href="css/Beta.3724fd34.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
