--- a/map/Beta.html
+++ b/map/Beta.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-Hant-TW">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>地圖封閉測試外部參加人員規則 | 夢想之都工作室</title>
-    <link rel="icon" href="https://www.dreamcity.studio/images/logo.ico" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-    />
-    <script defer="defer" src="js/chunk-vendors.91092d75.js"></script>
-    <script defer="defer" src="js/Beta.9de1e868.js"></script>
-    <link href="css/chunk-vendors.ea48489f.css" rel="stylesheet" />
-    <link href="css/Beta.3724fd34.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but map doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="fb-root"></div>
-    <script
-      async
-      defer="defer"
-      crossorigin="anonymous"
-      src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v15.0"
-      nonce="IxMIHss0"
-    ></script>
-    <script
-      async
-      src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script>
-    <div id="app"></div>
-  </body>
-</html>
+<!doctype html><html lang="zh-Hant-TW"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>地圖封閉測試外部參加人員規則 | 夢想之都工作室</title><link rel="icon" href="https://www.dreamcity.studio/images/logo.ico"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><script defer="defer" src="/js/chunk-vendors.91092d75.js"></script><script defer="defer" src="/js/Beta.861b5e25.js"></script><link href="/css/chunk-vendors.ea48489f.css" rel="stylesheet"><link href="/css/Beta.3724fd34.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but map doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="fb-root"></div><script async defer="defer" crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v15.0" nonce="IxMIHss0"></script><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><div id="app"></div></body></html>
