--- a/map/index.html
+++ b/map/index.html
@@ -1,79 +1,8 @@
-<!DOCTYPE html>
-<html lang="zh-Hant-TW">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>地圖創作 | DreamCity</title>
-    <link rel="icon" href="https://www.dreamcity.studio/images/logo.ico" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
-    />
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-76542419-5"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-
+<!doctype html><html lang="zh-Hant-TW"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>地圖創作 | DreamCity</title><link rel="icon" href="https://www.dreamcity.studio/images/logo.ico"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><script async src="https://www.googletagmanager.com/gtag/js?id=UA-76542419-5"></script><script>window.dataLayer = window.dataLayer || [];
+  
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
-
-      gtag("config", "UA-76542419-5");
-    </script>
-    <title>地圖創作 | DreamCity</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="Shortcut Icon" type="image/x-icon" href="../images/logo.ico" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-    <meta property="og:title" content="地圖創作 - 夢想之都" />
-    <meta
-      property="og:description"
-      content="喜歡夢想之都的地圖作品嗎？生存地圖、解謎地圖、PvP地圖、CTM地圖，現在趕快來下載 Minecraft 地圖吧！"
-    />
-    <meta
-      name="description"
-      content="喜歡夢想之都的地圖作品嗎？生存地圖、解謎地圖、PvP地圖、CTM地圖，找到屬於你的Minecraft地圖吧！"
-    />
-    <meta
-      property="og:image"
-      content="https://www.dreamcity.studio/map/images/pic11.jpg"
-    />
-    <meta
-      name="keywords"
-      content="minecraft 地圖,minecraft地圖,rpg,麥塊地圖,pve,minecraft rpg地圖,minecraft 生存地圖,創世神地圖,島國勇者,minecraft地圖下載,過五關斬六將,minecraft 地圖下載,麥塊 地圖,minecraft大型生存地圖,minecraft 解謎地圖,創世神 地圖,minecraft生存地圖,mc地圖,夢想之都,賣快地圖,minecraft冒險地圖,minecraft ctm,地圖minecraft,minecraft 多人地圖,ctm minecraft,minecraft解謎地圖,地圖 minecraft,minecraft pvp地圖,mc 地圖,解謎地圖,minecraft 地圖推薦,島國,minecraft多人rpg地圖,生存地圖,minecraft map 巴哈,minecraft多人地圖,minecraft多人解謎地圖,minecraft rpg生存地圖,魏滅蜀之戰,科洛維亞大陸ii,minecraft rpg 地圖,minecraft 解謎,麥塊地圖下載,minecraft 雙人地圖,minecraft 冒險地圖,賣快 地圖,minecraft ctm地圖,minecraft雙人解謎地圖,minecraft pve地圖,ctm地圖,我的世界地圖,地圖,minecraft 單人地圖,1.12.2 地圖,絕界行,minecraft rpg map,minecraft解謎地圖多人,minecraft 伺服器,minecraft 推薦地圖,minecraft 1.16.1 地圖,minecraft 1.12.2 地圖,minecraft 生存,麥快地圖,minecraft 大型生存地圖,夢都,1.16.1 地圖,minecraft地圖推薦,minecraft 地圖 下載,科洛維亞,rpg地圖,minecraft雙人地圖,minecraft恐怖解謎地圖,pvp pve,ㄇㄞˉ塊地圖,minecraft 島國勇者,麥塊生存地圖,minecraft rpg冒險地圖,minecraft server權限設定,島國勇者 攻略,當個創世神 地圖,麥塊 地圖下載,minecraft ctm地圖下載,minecraft 解謎地圖 多人,minecraft大型rpg地圖,夢想之都 minecraft,minecraft 地图,pvp地圖,minecraft 多人rpg地圖,詛咒之冬,minecraft ctm map,minecraft 好玩地圖,minecraft 地圖 推薦,我的世界 地圖"
-    />
-    <script defer="defer" src="js/chunk-vendors.63ff98d6.js"></script>
-    <script defer="defer" src="js/index.538835e2.js"></script>
-    <link href="css/chunk-vendors.ed5a477f.css" rel="stylesheet" />
-    <link href="css/index.9428cff0.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but map doesn't work properly without JavaScript enabled.
-        Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-  </body>
-</html>
+      gtag('js', new Date());
+  
+      gtag('config', 'UA-76542419-5');</script><title>地圖創作 | DreamCity</title><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/><link rel="stylesheet" href="assets/css/main.css"/><link rel="Shortcut Icon" type="image/x-icon" href="../images/logo.ico"/><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"><noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript><meta property="og:title" content="地圖創作 - 夢想之都"><meta property="og:description" content="喜歡夢想之都的地圖作品嗎？生存地圖、解謎地圖、PvP地圖、CTM地圖，現在趕快來下載 Minecraft 地圖吧！"><meta name="description" content="喜歡夢想之都的地圖作品嗎？生存地圖、解謎地圖、PvP地圖、CTM地圖，找到屬於你的Minecraft地圖吧！"><meta property="og:image" content="https://www.dreamcity.studio/map/images/pic11.jpg"><meta name="keywords" content="minecraft 地圖,minecraft地圖,rpg,麥塊地圖,pve,minecraft rpg地圖,minecraft 生存地圖,創世神地圖,島國勇者,minecraft地圖下載,過五關斬六將,minecraft 地圖下載,麥塊 地圖,minecraft大型生存地圖,minecraft 解謎地圖,創世神 地圖,minecraft生存地圖,mc地圖,夢想之都,賣快地圖,minecraft冒險地圖,minecraft ctm,地圖minecraft,minecraft 多人地圖,ctm minecraft,minecraft解謎地圖,地圖 minecraft,minecraft pvp地圖,mc 地圖,解謎地圖,minecraft 地圖推薦,島國,minecraft多人rpg地圖,生存地圖,minecraft map 巴哈,minecraft多人地圖,minecraft多人解謎地圖,minecraft rpg生存地圖,魏滅蜀之戰,科洛維亞大陸ii,minecraft rpg 地圖,minecraft 解謎,麥塊地圖下載,minecraft 雙人地圖,minecraft 冒險地圖,賣快 地圖,minecraft ctm地圖,minecraft雙人解謎地圖,minecraft pve地圖,ctm地圖,我的世界地圖,地圖,minecraft 單人地圖,1.12.2 地圖,絕界行,minecraft rpg map,minecraft解謎地圖多人,minecraft 伺服器,minecraft 推薦地圖,minecraft 1.16.1 地圖,minecraft 1.12.2 地圖,minecraft 生存,麥快地圖,minecraft 大型生存地圖,夢都,1.16.1 地圖,minecraft地圖推薦,minecraft 地圖 下載,科洛維亞,rpg地圖,minecraft雙人地圖,minecraft恐怖解謎地圖,pvp pve,ㄇㄞˉ塊地圖,minecraft 島國勇者,麥塊生存地圖,minecraft rpg冒險地圖,minecraft server權限設定,島國勇者 攻略,當個創世神 地圖,麥塊 地圖下載,minecraft ctm地圖下載,minecraft 解謎地圖 多人,minecraft大型rpg地圖,夢想之都 minecraft,minecraft 地图,pvp地圖,minecraft 多人rpg地圖,詛咒之冬,minecraft ctm map,minecraft 好玩地圖,minecraft 地圖 推薦,我的世界 地圖"/><script defer="defer" src="/js/chunk-vendors.63ff98d6.js"></script><script defer="defer" src="/js/index.538835e2.js"></script><link href="/css/chunk-vendors.ed5a477f.css" rel="stylesheet"><link href="/css/index.9428cff0.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but map doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
