--- a/map/Lost_in_Space.html
+++ b/map/Lost_in_Space.html
@@ -1,1 +1,44 @@
-<!doctype html><html lang="zh-Hant-TW"><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>星痕冒險 | 夢想之都工作室</title><link rel="icon" href="https://www.dreamcity.studio/images/logo.ico"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"/><script defer="defer" src="/js/chunk-vendors.63ff98d6.js"></script><script defer="defer" src="/js/Lost_in_Space.9cdbb516.js"></script><link href="/css/chunk-vendors.ed5a477f.css" rel="stylesheet"><link href="/css/Lost_in_Space.72dc7f10.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but map doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="fb-root"></div><script async defer="defer" crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v15.0" nonce="IxMIHss0"></script><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="zh-Hant-TW">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>星痕冒險 | 夢想之都工作室</title>
+    <link rel="icon" href="https://www.dreamcity.studio/images/logo.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
+    />
+    <script defer="defer" src="js/chunk-vendors.63ff98d6.js"></script>
+    <script defer="defer" src="js/Lost_in_Space.9cdbb516.js"></script>
+    <link href="css/chunk-vendors.ed5a477f.css" rel="stylesheet" />
+    <link href="css/Lost_in_Space.72dc7f10.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but map doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="fb-root"></div>
+    <script
+      async
+      defer="defer"
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v15.0"
+      nonce="IxMIHss0"
+    ></script>
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
+    <div id="app"></div>
+  </body>
+</html>
