--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<!doctype html><html lang="zh-Hant-TW"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="https://www.dreamcity.studio/images/logo.ico"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><title>繪師列表 | 夢想之都工作室</title><meta property="og:title" content="繪師列表 | 夢想之都工作室"/><meta itemprop="name" content="繪師列表 | 夢想之都工作室"><meta property="twitter:meta_title" content="繪師列表 | 夢想之都工作室"><meta name="description" content="這裡放著夢都繪師們個人與專案所做的作品。當然若是想了解繪師們，也歡迎點擊下方，前往各繪師的個版。"/><meta property="og:description" content="這裡放著夢都繪師們個人與專案所做的作品。當然若是想了解繪師們，也歡迎點擊下方，前往各繪師的個版。"/><meta itemprop="description" content="這裡放著夢都繪師們個人與專案所做的作品。當然若是想了解繪師們，也歡迎點擊下方，前往各繪師的個版。"><meta property="twitter:description" content="這裡放著夢都繪師們個人與專案所做的作品。當然若是想了解繪師們，也歡迎點擊下方，前往各繪師的個版。"><meta name="image" content="https://www.dreamcity.studio/images/logo.ico"/><meta itemprop="image" content="https://www.dreamcity.studio/images/logo.ico"><meta property="og:image" content="https://www.dreamcity.studio/images/logo.ico"/><meta property="twitter:image" content="https://www.dreamcity.studio/images/logo.ico"><meta property="og:url" content="https://www.dreamcity.studio/art/"/><meta property="og:type" content="Website"/><meta property="twitter:card" content="summary_large_image"><script defer="defer" src="js/chunk-vendors.9d1dbce3.js"></script><script defer="defer" src="js/index.50fe206c.js"></script><link href="css/chunk-vendors.c0451eb0.css" rel="stylesheet"><link href="css/index.50077140.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but menu doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html><html lang="zh-Hant-TW"><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" href="https://www.dreamcity.studio/images/logo.ico"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"/><title>Vtuber | 夢想之都工作室</title><meta property="og:title" content="Vtuber | 夢想之都工作室"/><meta itemprop="name" content="Vtuber | 夢想之都工作室"/><meta property="twitter:meta_title" content="Vtuber | 夢想之都工作室"/><meta name="description" content="夢想之都工作室是"/><meta property="og:description" content="夢想之都工作室是"/><meta itemprop="description" content="夢想之都工作室是"/><meta property="twitter:description" content="夢想之都工作室是"/><meta name="image" content="https://www.dreamcity.studio/images/logo.ico"/><meta itemprop="image" content="https://www.dreamcity.studio/images/logo.ico"/><meta property="og:image" content="https://www.dreamcity.studio/images/logo.ico"/><meta property="twitter:image" content="https://www.dreamcity.studio/images/logo.ico"/><meta property="og:url" content="https://www.dreamcity.studio/art/"/><meta property="og:type" content="Website"/><meta property="twitter:card" content="summary_large_image"/><link rel="stylesheet" href="./slick/slick.css"/><link rel="stylesheet" href="./slick/slick-theme.css"/><style>.slider {
+        width: 100%;
+        max-height: 500px;
+      }
+
+      .slick-slide {
+        margin: 0px 20px;
+        max-height: 500px;
+      }
+
+      .slick-slide img {
+        width: 100%;
+        max-height: 500px;
+      }
+
+      .slick-prev:before,
+      .slick-next:before {
+        color: black;
+      }
+
+      .slick-slide {
+        transition: all ease-in-out 0.3s;
+        opacity: 0.2;
+      }
+
+      .slick-active {
+        opacity: 0.5;
+      }
+
+      .slick-current {
+        opacity: 1;
+      }</style><script defer="defer" src="js/chunk-vendors.db123f14.js"></script><script defer="defer" src="js/index.31930ec8.js"></script><link href="css/chunk-vendors.de78f0af.css" rel="stylesheet"><link href="css/index.dfb75f2b.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but menu doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="https://code.jquery.com/jquery-2.2.0.min.js"></script><script src="./slick/slick.js" charset="utf-8"></script><script>$(document).on("ready", function () {
+        $(".vertical-center-4").slick({
+          autoplay: true,
+          autoplaySpeed: 3000,
+          slidesToShow: 1,
+          centerMode: true,
+          variableWidth: true,
+          
+          responsive: [
+            {
+              breakpoint: 960,
+              settings: {
+                autoplay: true,
+                autoplaySpeed: 3000,
+                slidesToShow: 1,
+                centerMode: true,
+                variableWidth: false,
+                // variableWidth: true,
+
+              },
+            },
+          ],
+        });
+      });</script></body></html>
