--- a/200.html
+++ b/200.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html >
 <head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="modulepreload" as="script" crossorigin href="/activity/_nuxt/entry.69331bff.js"><link rel="preload" as="style" href="/activity/_nuxt/entry.2aad1265.css"><link rel="prefetch" as="script" crossorigin href="/activity/_nuxt/error-component.3301b739.js"><link rel="stylesheet" href="/activity/_nuxt/entry.2aad1265.css"></head>
-<body ><div id="__nuxt"></div><script>window.__NUXT__={serverRendered:false,config:{public:{},app:{baseURL:"\u002Factivity\u002F",buildAssetsDir:"\u002F_nuxt\u002F",cdnURL:""}},data:{},state:{}}</script><script type="module" src="/activity/_nuxt/entry.69331bff.js" crossorigin></script></body>
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="modulepreload" as="script" crossorigin href="/_nuxt/entry.69331bff.js"><link rel="preload" as="style" href="/_nuxt/entry.2aad1265.css"><link rel="prefetch" as="script" crossorigin href="/_nuxt/error-component.3301b739.js"><link rel="stylesheet" href="/_nuxt/entry.2aad1265.css"></head>
+<body ><div id="__nuxt"></div><script>window.__NUXT__={serverRendered:false,config:{public:{},app:{baseURL:"\u002F",buildAssetsDir:"\u002F_nuxt\u002F",cdnURL:""}},data:{},state:{}}</script><script type="module" src="/_nuxt/entry.69331bff.js" crossorigin></script></body>
 </html>
