--- a/act/index.html
+++ b/act/index.html
@@ -1,6 +1,66 @@
 <!DOCTYPE html>
-<html >
-<head><meta charset="utf-8">
+<html lang="zh-Hant-TW">
+<head>
+  <link rel="icon" href="https://www.dreamcity.studio/images/logo.ico" />
+
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        "gtm.start": new Date().getTime(),
+        event: "gtm.js",
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != "dataLayer" ? "&l=" + l : "";
+      j.async = true;
+      j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, "script", "dataLayer", "GTM-KNFPB22");
+  </script>
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-76542419-5"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-76542419-5");
+  </script>
+  <meta property="og:locale" content="zh_TW" />
+  <title>夢都快訊 | 夢想之都工作室</title>
+  <meta property="og:title" content="夢都快訊 | 夢想之都工作室" />
+  <meta itemprop="name" content="夢都快訊 | 夢想之都工作室" />
+  <meta property="twitter:meta_title" content="夢都快訊 | 夢想之都工作室" >
+  <meta name="description" content="夢想之都工作室新專案上線啦！這次我們帶給大家一個全新的遊戲體驗，快來一起探索吧！" />
+  <meta property="og:description" content="夢想之都工作室新專案上線啦！這次我們帶給大家一個全新的遊戲體驗，快來一起探索吧！" />
+  <meta itemprop="description" content="夢想之都工作室新專案上線啦！這次我們帶給大家一個全新的遊戲體驗，快來一起探索吧！" />
+  <meta property="twitter:description" content="夢想之都工作室新專案上線啦！這次我們帶給大家一個全新的遊戲體驗，快來一起探索吧！" />
+  <meta name="image" content="https://dreamcity.studio/activity/2023_lantern_festival/images/main.jpg" />
+  <meta
+    itemprop="image"
+    content="https://dreamcity.studio/activity/2023_lantern_festival/images/main.jpg"
+  />
+  <meta
+    property="og:image"
+    content="https://dreamcity.studio/activity/2023_lantern_festival/images/main.jpg"
+  />
+  <meta
+    property="twitter:image"
+    content="https://dreamcity.studio/activity/2023_lantern_festival/images/main.jpg"
+  />
+  <meta property="og:url" content="https://www.dreamcity.studio/activity/" />
+  <meta property="og:type" content="Website" />
+  <meta property="twitter:card" content="summary_large_image" />
+
+
+
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style type="text/css" id="vuetify-theme-stylesheet">.v-theme--light {
       color-scheme: normal;
