--- a/join/index.html
+++ b/join/index.html
@@ -42,8 +42,8 @@
 
   <!-- og -->
   <meta property="og:title" content="加入夢都">
-  <meta property="og:description" content="自臺灣組成，以學生為軸心，我們是夢想之都工作室。帶著我們的經驗與能力，持續進行 Minecraft 創作，誠摯歡迎您的加入。">
-  <meta name="description" content="自臺灣組成，以學生為軸心，我們是夢想之都工作室。帶著我們的經驗與能力，持續進行 Minecraft 創作，誠摯歡迎您的加入。">
+  <meta property="og:description" content="夢想之都工作室，致力於Minecraft地圖設計與VTuber經營。組織分為建築設計、企劃管理、美術宣傳、技術工程、虛擬偶像、行政、資訊與行銷部門。熱愛創作並對Minecraft及VTuber充滿熱情者，我們誠摯歡迎你的加入。">
+  <meta name="description" content="夢想之都工作室，致力於Minecraft地圖設計與VTuber經營。組織分為建築設計、企劃管理、美術宣傳、技術工程、虛擬偶像、行政、資訊與行銷部門。熱愛創作並對Minecraft及VTuber充滿熱情者，我們誠摯歡迎你的加入。">
   <meta property="og:image" content="https://www.dreamcity.studio/join/images/untitled1.jpg">
   <!-- Facebook Pixel Code -->
   <script>
