--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </style>
   </head>
   <body>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
     <h1>Google Login and Avatar Display</h1>
     <div id="g_id_onload"
      data-client_id="307956122015-he5a5l5lrl1utcha8rnk16ko7n97j8fu.apps.googleusercontent.com"
