--- a/bo/test.html
+++ b/bo/test.html
@@ -52,7 +52,7 @@
 
 
       // 初始化
-      csmapi.set_endpoint('https://6.iottalk.tw:9999');
+      csmapi.set_endpoint('https://6.iottalk.tw');
       updateLuminance();
 
     </script>
